# projeto_grupo4

./: README.md  extracao_dados.ipynb  pyproject.toml
dados/: amazonia_nao_corrigido_subclassificado_dados_agrupados.csv  cerrado_corrigido_dados_agrupados.csv  cerrado_dados_agrupados.csv
