[tool.poetry]
name = "projeto-grupo4"
version = "0.1.0"
description = ""
authors = ["Luiz Gabriel Silva <luiz.gabriel@inpe.br>, Luzia Pedroso <> , Grupo 4 <>"]
readme = "README.md"
packages = [{include = "projeto_grupo4"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
